--- a/src/style1.css
+++ b/src/style1.css
@@ -7,7 +7,9 @@ nav {font-family: sans-serif; font-size: 10px;}
 /* Use the 'Supermercado One' font at 45px (colored #5d4037) for the restaurant name. */
 
 /* Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. */
-#menu {columns: 400px 2; column-gap: 100px;}
+#menu {columns: 400px 2; column-gap: 100px;
+    column-rule: dashed 2px rosybrown}
+
 section {margin-bottom: 50px;}
 
 /* Show each of the section headings of the menu (e.g. "Starters") in small caps, colored #6d4c41. */
@@ -26,3 +28,37 @@ dd {margin: 0 0 12px 0; display: flex;}
 
 /* Draw a 2px dashed rosybrown border around the address/footer */
 address {padding: 10px;}
+
+#main{
+    font-size: 18px;
+    font-family: 'Lato';    
+}
+
+
+h1{
+    font-family: 'Supermercado One';
+    font-size: 45px;
+    color: #5d4037;
+}
+
+h2{
+    font-variant: small-caps;
+    color: #6d4c41;
+}
+
+.price{
+    color: #b22222;
+}
+
+footer{
+    border: dashed #bc8f8f 2px;
+
+}
+
+dt{
+    font-weight: bold;
+    font-size: 20px;
+}
+body{
+    background-image: url("map-bg.jpg");
+}
